--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,20 @@
         ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.2",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "portphp/csv": "^1.1",
+        "portphp/doctrine": "^1.0",
+        "portphp/steps": "^1.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
+        "symfony/workflow": "^4.1",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
