--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,10 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "7.3",
         "sensio/generator-bundle": "^3.0",
+        "symfony/browser-kit": "^4.1",
+        "symfony/css-selector": "^4.1",
         "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
